--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <html>
 	<head>
-		<title>TUKA APPS </title>
+		<title>D7my APPS </title>
 		<meta charset="utf-8" />
 		   <meta name="title" content="توكا بلس"> <!-- اسم الموقع SEO -->
     <meta name="description" content="apps plus ipa and tools Deb and all apple"> <!-- وصف الموقع SEO -->
@@ -42,7 +42,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-				<h2>  TUKA APPS </h2>
+				<h2> D7my  </h2>
 				<h6> تفضل بتصفح الموقع  </h6>
 					<ul class="icons">
 						<li><a href="https://twitter.com/ma9za" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -76,11 +76,11 @@
       <p></p>
  <!---الازرار-->
 
-<ul class="actions"><li><a href="apps.html" class="button">   IPA تطبيقات  </a></li>
+<ul class="actions"><li><a href="Ja.html" class="button">  تطـبـيقات الـجلـبريك  </a></li>
 <p>
 <ul class="actions"><li><a href="deb.html" class="button">  Deb ادوات </a></li>
 <p>
- <ul class="actions"><li><a href="ma.html" class="button">   صفحة المنشورات </a></li>
+ <ul class="actions"><li><a href="apps.html" class="button"> IPA تطبيقات  </a></li>
  <p></p>
 			<!-- Footer -->
 				<footer id="footer">
