--- a/ipa.html
+++ b/ipa.html
@@ -300,6 +300,21 @@
       <br>
 	<!-- app end -->
 	<br>
+
+	<br>
+	<!-- app start -->
+    	<div class="credits">
+		<img class="credits-icon" src="ipa/Clipworks.png">
+		<a href="https://gofile.io/d/wc7ih9" 
+		class="button"> تثبيت </a>
+		<h1 class="credits-name">  Clipworks </h1>
+		<p class="credits-position"> تطبيق يقوم بتعديل الصور والفيديوهات    </p>
+	</div>
+	<br>
+      <br>
+	<!-- app end -->
+	<br>
+
 <hr>
 
 
