--- a/ipa.html
+++ b/ipa.html
@@ -304,7 +304,7 @@
 	<br>
 	<!-- app start -->
     	<div class="credits">
-		<img class="credits-icon" src="ipa/Clipworks.png">
+		<img class="credits-icon" src="ipa/Clipworks.PNG">
 		<a href="https://gofile.io/d/wc7ih9" 
 		class="button"> تثبيت </a>
 		<h1 class="credits-name">  Clipworks </h1>
